--- a/src/components/service/service.css
+++ b/src/components/service/service.css
@@ -2,6 +2,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
     box-shadow: 0px 0px 20px -9px #1c1a1a;
+    height: 100%;
 }
 
 .service img {
